exports[`Duration Duration.Full overrides allow overriding format behaviours 1`] = `
<span
  className="tabular-numerals">
  1332 weeks, 11 days, 7 hours, 29 minutes, 0 seconds
</span>
`;

exports[`Duration Duration.Full renders as expected 1`] = `
<span
  className="tabular-numerals">
  0 seconds
</span>
`;

exports[`Duration Duration.Full renders as expected 2`] = `
<span
  className="tabular-numerals">
  5 seconds
</span>
`;

exports[`Duration Duration.Full renders as expected 3`] = `
<span
  className="tabular-numerals">
  15 minutes, 7 seconds
</span>
`;

exports[`Duration Duration.Full renders as expected 4`] = `
<span
  className="tabular-numerals">
  1 hour, 45 minutes, 16 seconds
</span>
`;

exports[`Duration Duration.Full renders as expected 5`] = `
<span
  className="tabular-numerals">
  4 hours, 59 minutes, 3 seconds
</span>
`;

exports[`Duration Duration.Full renders as expected 6`] = `
<span
  className="tabular-numerals">
  1 day, 7 hours, 3 minutes
</span>
`;

exports[`Duration Duration.Full renders as expected 7`] = `
<span
  className="tabular-numerals">
  1 week, 13 days, 16 hours
</span>
`;

exports[`Duration Duration.Full renders as expected 8`] = `
<span
  className="tabular-numerals">
  9 weeks, 2 days, 20 hours
</span>
`;

exports[`Duration Duration.Full tabularNumerals can be disabled 1`] = `
<span
  className="">
  0 seconds
</span>
`;

exports[`Duration Duration.Micro overrides allow overriding format behaviours 1`] = `
<span
  className="tabular-numerals">
  1332w 11d 7h 29m 0s
</span>
`;

exports[`Duration Duration.Micro renders as expected 1`] = `
<span
  className="tabular-numerals">
  0s
</span>
`;

exports[`Duration Duration.Micro renders as expected 2`] = `
<span
  className="tabular-numerals">
  5s
</span>
`;

exports[`Duration Duration.Micro renders as expected 3`] = `
<span
  className="tabular-numerals">
  15m
</span>
`;

exports[`Duration Duration.Micro renders as expected 4`] = `
<span
  className="tabular-numerals">
  2h
</span>
`;

exports[`Duration Duration.Micro renders as expected 5`] = `
<span
  className="tabular-numerals">
  5h
</span>
`;

exports[`Duration Duration.Micro renders as expected 6`] = `
<span
  className="tabular-numerals">
  1d
</span>
`;

exports[`Duration Duration.Micro renders as expected 7`] = `
<span
  className="tabular-numerals">
  3w
</span>
`;

exports[`Duration Duration.Micro renders as expected 8`] = `
<span
  className="tabular-numerals">
  9w
</span>
`;

exports[`Duration Duration.Micro tabularNumerals can be disabled 1`] = `
<span
  className="">
  0s
</span>
`;

exports[`Duration Duration.Short overrides allow overriding format behaviours 1`] = `
<span
  className="tabular-numerals">
  1332w 11d 7h 29m 0s
</span>
`;

exports[`Duration Duration.Short renders as expected 1`] = `
<span
  className="tabular-numerals">
  0s
</span>
`;

exports[`Duration Duration.Short renders as expected 2`] = `
<span
  className="tabular-numerals">
  5s
</span>
`;

exports[`Duration Duration.Short renders as expected 3`] = `
<span
  className="tabular-numerals">
  15m 7s
</span>
`;

exports[`Duration Duration.Short renders as expected 4`] = `
<span
  className="tabular-numerals">
  1h 45m
</span>
`;

exports[`Duration Duration.Short renders as expected 5`] = `
<span
  className="tabular-numerals">
  4h 59m
</span>
`;

exports[`Duration Duration.Short renders as expected 6`] = `
<span
  className="tabular-numerals">
  1d 7h
</span>
`;

exports[`Duration Duration.Short renders as expected 7`] = `
<span
  className="tabular-numerals">
  1w 14d
</span>
`;

exports[`Duration Duration.Short renders as expected 8`] = `
<span
  className="tabular-numerals">
  9w 3d
</span>
`;

exports[`Duration Duration.Short tabularNumerals can be disabled 1`] = `
<span
  className="">
  0s
</span>
`;

exports[`Duration stateless Components are accessible 1`] = `
Array [
  "Full",
  "Short",
  "Micro",
]
`;
